[tool.poetry]
name = "repl_python3_python101-Tarunr09"
version = "0.1.0"
description = ""
authors = ["tarunop2003 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
